tests/reference/asr-generics_list_01-39c4044.stderr
semantic error: Type mismatch in binary operator; the types must be compatible
  --> tests/../integration_tests/generics_list_01.py:33:12
   |
33 |     return x / k
   |            ^   ^ type mismatch (f64 and i32)
